<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movie_tab">Movie</string>
    <string name="tv_show_tab">TV Show</string>
    <string name="nothing_here">Nothing here!</string>
    <string name="unknown_error_message">Something went wrong. Please try again later.</string>
    <string name="message_image_description">Message Image</string>
    <string name="movie_image_description">Movie Image</string>
    <string name="description">Description</string>
    <string name="score">score</string>
    <string name="favorites">favorites</string>
    <string name="episodes">episodes</string>
    <string name="minutes_per_episode">min /ep</string>
    <string name="score_value">%s%%</string>
    <string name="favorite_title">Favorite</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="search_hint">Search title</string>
</resources>